--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,17 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      mongo:
+        image: mongo:6.0
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -24,5 +35,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests and coverage check
+        env:
+          MONGO_CONNECTION: ${{ secrets.MONGO_CONNECTION }}
+          PROJECT_DATABASE: ${{ secrets.PROJECT_DATABASE }}
+          PROJECT_COLLECTION: ${{ secrets.PROJECT_COLLECTION}}
         run: |
           ./run_tests.sh
